exports[`test renders disabled if missing prop 1`] = `
<div className="background--light-primary one-whole text-center push-top push-double-top@lap-and-up push-double-bottom" style={{...}}>
<Back />
<Meta title="Change your password" />
<Form id="reset-password" classes={{...}} submit={[Function]}>
<div className="push-double">
<h4 className="text-center">
Change Password
</h4>
</div>
<Input name="current" label="Current Password" validation={[Function]} type="password" />
<Input name="newP" label="New Password" validation={[Function]} errorText="New password does not match" type="password" />
<Input name="newPDup" label="Repeat New Password" validation={[Function]} errorText="New password does not match" type="password" />
<button className="btn--disabled" disabled={true}>
Enter
</button>
</Form>
</div>
`;

exports[`test renders with props 1`] = `
<div className="background--light-primary one-whole text-center push-top push-double-top@lap-and-up push-double-bottom" style={{...}}>
<Back />
<Meta title="Change your password" />
<Form id="reset-password" classes={{...}} submit={[Function]}>
<div className="push-double">
<h4 className="text-center">
Change Password
</h4>
</div>
<Input name="current" label="Current Password" validation={[Function]} type="password" />
<Input name="newP" label="New Password" validation={[Function]} errorText="New password does not match" type="password" />
<Input name="newPDup" label="Repeat New Password" validation={[Function]} errorText="New password does not match" type="password" />
<button className="btn" disabled={false}>
Enter
</button>
</Form>
</div>
`;
